# swot_sst_sda

./: CLAUDE.md  README.md  pyproject.toml
swot_sda/: __init__.py  inference.py  metrics.py  model.py  transforms.py
swot_sda/_modulus/: __init__.py  filesystem.py  meta.py  model_registry.py  module.py
swot_sda/_sda/: __init__.py  mcs.py  nn.py  score.py  utils.py
